PKCS12 keyalg RSA/sigalg SHA256withRSA 방식 인증서 생성/인증서로부터 public key&private key를 받아 RSA 비대칭 양방향 암호화&복호화 성공 (2021-09-30)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8090
+server.port=443
+server.ssl.key-store=classpath:certificate.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=elsh1122!
+server.ssl.key-alias=certificate
